test_regress/t/t_hier_block1_bad.out
%Warning-HIERBLOCK: t/t_hier_block1_bad.v:19:8: Top module marked as hierarchical block, ignoring
                                              : ... note: In instance 't'
                                              : ... Suggest remove verilator hier_block on this module
   19 | module t (   
      |        ^
                    ... For warning description see https://verilator.org/warn/HIERBLOCK?v=latest
                    ... Use "/* verilator lint_off HIERBLOCK */" and lint_on around source to disable this message.
%Error: t/t_hier_block1_bad.v:59:23: Modport cannot be used at the hierarchical block boundary
                                   : ... note: In instance 't.i_sub1'
   59 |     byte_ifs.receiver in,
      |                       ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_hier_block1_bad.v:60:21: Modport cannot be used at the hierarchical block boundary
                                   : ... note: In instance 't.i_sub1'
   60 |     byte_ifs.sender out
      |                     ^~~
%Error: Exiting due to
